WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263211
Layer contents are not invalidated when the GPUP crashes
https://bugs.webkit.org/show_bug.cgi?id=263211
Summary
Layer contents are not invalidated when the GPUP crashes
Matt Woodrow
Reported
2023-10-16 13:13:19 PDT
<
rdar://115756729
> GPUP crashes result in any remote image buffers have new backends created in the new process, but nothing currently notifies the rendering code that we need to repaint the pixel contents.
Attachments
Add attachment
proposed patch, testcase, etc.
Matt Woodrow
Comment 1
2023-10-16 13:16:53 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19124
EWS
Comment 2
2023-10-19 14:54:26 PDT
Committed
269546@main
(dff0f0bbe2c5): <
https://commits.webkit.org/269546@main
> Reviewed commits have been landed. Closing PR #19124 and removing active labels.
EWS
Comment 3
2023-10-29 15:25:56 PDT
Committed
267815.466@safari-7617-branch
(b740dd268629): <
https://commits.webkit.org/267815.466@safari-7617-branch
> Reviewed commits have been landed. Closing PR #897 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug