Layer contents are not invalidated when the GPUP crashes. https://bugs.webkit.org/show_bug.cgi?id=263211 <rdar://115756729>

Reviewed by Simon Fraser.

GPUP crashes result in any remote image buffers have new backends created in the new process, but nothing currently notifies the rendering code that we need to repaint the pixel contents.

* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStoreCollection.h:
(WebKit::RemoteLayerBackingStoreCollection::gpuProcessConnectionWasDestroyed):
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStoreCollection.h:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerWithRemoteRenderingBackingStoreCollection.mm:
(WebKit::RemoteLayerWithRemoteRenderingBackingStoreCollection::gpuProcessConnectionWasDestroyed):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeContext.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeContext.mm:
(WebKit::RemoteLayerTreeContext::gpuProcessConnectionWasDestroyed):
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/RemoteLayerTreeDrawingArea.mm:
(WebKit::RemoteLayerTreeDrawingArea::gpuProcessConnectionWasDestroyed):
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::gpuProcessConnectionWasDestroyed):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::gpuProcessConnectionClosed):

Canonical link: https://commits.webkit.org/269546@main