Source/WebKit/WebProcess/WebPage/WebPage.h
@@ -1564,6 +1564,7 @@ public:
 
 #if ENABLE(GPU_PROCESS)
     void gpuProcessConnectionDidBecomeAvailable(GPUProcessConnection&);
+    void gpuProcessConnectionWasDestroyed();
     RemoteRenderingBackendProxy& ensureRemoteRenderingBackendProxy();
 #endif
 
